--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^2.15.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-config-react-app": "^5.2.1",
     "husky": "^4.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
